SSB-179: Fixed filter scrollbar for mobile , breadcrumb,sortby

--- a/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/_module.less
@@ -1692,6 +1692,7 @@
     }
     .cat_tite {
         .lib-font-size(22);
+        font-weight: 800;
         margin-bottom: 0;
         text-align: left;
         margin-top: auto;
@@ -2264,7 +2265,7 @@
                     }
                 }
                 .category-banner-image {
-                    padding: 2rem 2rem 0 2rem;
+                    padding: 0 0 0 2rem;
                     img {
                         border-radius: 1rem;
                     }
@@ -2275,7 +2276,6 @@
                 position: relative;
             }
             .breadcrumbs {
-                margin: 30px auto;
                 order: 1;
             }
             .shorting_main {
@@ -2651,7 +2651,7 @@
         }
         .page-wrapper {
             .breadcrumbs {
-                margin-top: 0;
+                margin-top: 1rem;
                 padding: 0 15px;
                 width: 100%;
             }
