--- a/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -93,14 +93,15 @@
         background-image: url('@{baseDir}images/arrow-color.svg');
         border-right: 0;
         border-top: 0;
+        font-weight: 600;
         border-bottom: 0;
         border-width: 0.063rem;
+        margin: 0 ;
         height: 3rem;
-        margin: 0 0 0 7px;
         padding-right: 2.25rem;
-        width: 15.25rem;
+        width: 12.25rem;
         @media only screen and (max-width: 1199px) and  (min-width: 992px) {
-            width: 16rem;
+            width: 12rem;
         }
     }
     select:not([disabled]) {
@@ -349,6 +350,7 @@
     .sorter {
         .sorter-label {
             .lib-font-size(16);
+            font-family: 'Quicksand';
             &:after {
                 display: none;
             }
