--- a/app/design/frontend/Alfakher/globalhookah/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_LayeredNavigation/web/css/source/_module.less
@@ -408,7 +408,6 @@
 
             .filter-title {
                 display: flex;
-                border-right: 1px solid #cdcaca;
                 top: 18px;
                 min-height: 1.75rem;
                 strong {
@@ -549,6 +548,10 @@
         }
     }
 
+    .filter-current .action.remove {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
     body {
         &.filter-active {
             .page-header {
@@ -631,7 +634,7 @@
                 z-index: 10;
 
                 .filter-options-content {
-                    max-height: 8.5rem;
+                    max-height: 18.5rem;
                     margin-bottom: 0.625rem;
 
                     .item {
