--- a/app/design/frontend/Alfakher/globalhookah/web/css/source/_breadcrumbs.less
+++ b/app/design/frontend/Alfakher/globalhookah/web/css/source/_breadcrumbs.less
@@ -12,7 +12,7 @@
 & when (@media-common = true) {
     .breadcrumbs {
         .lib-breadcrumbs();
-        margin: 30px 0;
+        margin: 0;
         padding: 0;
     }
     .page-wrapper {
